--- a/build.gradle
+++ b/build.gradle
@@ -177,6 +177,11 @@ tasks.named('processResources', ProcessResources).configure {
 
 // Example for how to get properties into the manifest for reading at runtime.
 tasks.named('jar', Jar).configure {
+    // 自定义打包路径与输出格式
+    archiveBaseName.set(mod_id)
+    archiveVersion.set("forge-${mod_version}")
+    destinationDirectory.set(file("${projectDir}/builds"))
+
     manifest {
         attributes(["Specification-Title"     : mod_id,
                     "Specification-Vendor"    : mod_authors,
