--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ minecraft {
         client {}
 
         server {
-            args '--nogui'
+            // args '--nogui' // 不禁用gui方便指令调试
         }
 
         data {
