chore 1.奖励领取提示优化
(cherry picked from commit 47ecff6abf978a4da9a1310526ee95d277f8ea5e)

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ minecraft {
         client {}
 
         server {
-            args '--nogui'
+            // args '--nogui' // 不禁用gui方便指令调试
         }
 
         data {
