- Add Economy Reward Type - Add EconomyParser for save eco data - Add PluginUtils for interact eco plugin - change RewardManager and RewardOptionScreen support edit economy amount - Some language was missing, will fix later - 1.16.5-1.1.0.dev6 - by kumoe

--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,14 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
+    maven {
+        name = 'Paper'
+        url = 'https://repo.papermc.io/repository/maven-public/'
+    }
+    maven {
+        name = 'Spigot'
+        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+    }
 }
 
 dependencies {
@@ -148,6 +156,8 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
+    implementation fg.deobf('org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT')
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
