chore 1.添加自动打包脚本
(cherry picked from commit 4fb6ac001f2646493cc7794d404374cb6ee4b7cc)

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
     // 若以上行报错则大概率为网络问题, 请切换网络并刷新Gradle
 }
 
+def javaVer = 16
+
 group = mod_group_id
 version = mod_version
 
@@ -13,7 +15,7 @@ base {
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(16)
+    toolchain.languageVersion = JavaLanguageVersion.of(javaVer)
 }
 
 minecraft {
