--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ plugins {
     // 若以上行报错则大概率为网络问题, 请切换网络并刷新Gradle
 }
 
+def javaVer = 8
+
 apply plugin: 'org.spongepowered.mixin'
 
 group = mod_group_id
@@ -26,7 +28,7 @@ base {
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(8)
+    toolchain.languageVersion = JavaLanguageVersion.of(javaVer)
 }
 
 minecraft {
